<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gesture_control</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="willmhueffed@gmail.com">locobot</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <build_depend>rclpy</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tkinter</build_depend>
  <build_depend>interbotix_xs_modules</build_depend>
  <build_depend>threading</build_depend>
  <build_depend>multiprocessing</build_depend>
  <build_depend>socket</build_depend>

  <exec_depend>socket</exec_depend>
  <exec_depend>multiprocessing</exec_depend>
  <exec_depend>threading</exec_depend>
  <exec_depend>interbotix_xs_modules</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>gensture_interfaces</exec_depend>
  <exec_depend>tkinter</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
